--- a/styles.css
+++ b/styles.css
@@ -4,11 +4,6 @@
     box-sizing: border-box;
 }
 
-:root {
-    --index: calc(1vw + 1vh);
-    --color-header:
-    --color-text:
-}
 
 @font-face {
     font-family: 'Times New Roman', Times, serif;
@@ -16,6 +11,21 @@
 }
 
 body {
-    background-image: url(../kristied.ru/images/background.jpg);
-    color: #fff
+     background-image: url(../kristied.ru/images/background.jpg);
+}
+
+.TheBossOfPic {
+    width: 100%;
+}
+
+.Button {
+    height: 100vh;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    position: relative;
+    background-repeat: inherit;
+    background-size: cover;
+    background-position: center;
+    display: flex;
 }
